--- a/travling.html
+++ b/travling.html
@@ -5,6 +5,9 @@
     <title> famous places in pune </title>
 </head>
 <body>
- <h1> visiting all places in pune </h1>   
+ <h1> visiting all places in pune </h1> 
+  <b>select date</b>
+  <lable for="inputdate">select date to visit:</lable>
+  <input for="date" id="inputdate">  
 </body>
 </html>
