--- a/travling.html
+++ b/travling.html
@@ -9,5 +9,11 @@
   <b>select date</b>
   <lable for="inputdate">select date to visit:</lable>
   <input for="date" id="inputdate">  
+  <h2>seeing the location on map</h2>
+  <image src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSExixGEWEWgwnTX5_5oR2yVAS_GksUT8mUZQ&s">
+    location
+  </image>
+  
+  
 </body>
 </html>
