--- a/travling.html
+++ b/travling.html
@@ -13,7 +13,13 @@
   <image src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSExixGEWEWgwnTX5_5oR2yVAS_GksUT8mUZQ&s">
     location
   </image>
-  
+  selecting optin of travling
+  <select>
+    <option>train</option>
+    <option>self</option>
+  </select>
+
+
   
 </body>
 </html>
