--- a/travling.html
+++ b/travling.html
@@ -11,8 +11,7 @@
   <input for="date" id="inputdate">  
   <h2>seeing the location on map</h2>
   <image src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSExixGEWEWgwnTX5_5oR2yVAS_GksUT8mUZQ&s">
-    location
-  </image>
+  </image><br>
   selecting optin of travling
   <select>
     <option>train</option>
